<resources>
    <string name="app_name">AndroidMessenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_person">Профиль пользователя</string>
    <string name="profile_name">Имя пользователя</string>
    <string name="profile_mail">Электронная почта</string>
    <string name="profile_id">Идентификатор</string>
    <string name="profile_login">Login</string>
    <string name="second_name_profile">Фамилия пользователя</string>
    <string name="role_profile">Род занятий</string>
    <string name="num_phone_profile">Номер телефона</string>
    <string name="age_profile">Возраст</string>
    <string name="adress_profile">Адрес</string>
    <string name="method_entry_profile">Способ входа</string>
    <string name="call">Позвонить</string>
    <string name="send_sms">Отправить SMS</string>
    <string name="save">Сохранить</string>
    <string name="password_log">Пароль</string>
    <string name="lost_password">Забыл(а) пароль</string>
    <string name="input">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="enter_messege">Введите сообщение</string>
    <string name="search">Поиск</string>
    <string name="hello_text">Приветствуем</string>
    <string name="password_accept_log">Подтверждение пароля</string>
    <string name="text_lost_password">Введите адрес электронной почты, чтобы получить инструкции по восстановлению пароля</string>
    <string name="send">Отправить</string>
    <string name="exit">Выход</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="inputNumPhone">Введите номер телефона</string>
    <string name="exitFromAcc">Выход из аккаунта</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

</resources>