<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/style_text_view_title"
            android:text="@string/profile_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/person_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileLogin"
                    style="@style/style_text_view_title"
                    android:text="@string/profile_login" />

                <TextView
                    android:id="@+id/profileMail"
                    style="@style/style_text_view_default"
                    android:text="@string/profile_mail" />

                <TextView
                    android:id="@+id/profileId"
                    style="@style/style_text_view_default"
                    android:text="@string/profile_id" />

                <TextView
                    android:id="@+id/profileFirstName"
                    style="@style/style_text_view_default"
                    android:layout_gravity="start"
                    android:paddingStart="30dp"
                    android:text="@string/profile_name" />

                <TextView
                    android:id="@+id/profileSecondName"
                    style="@style/style_text_view_default"
                    android:layout_gravity="start"
                    android:paddingStart="30dp"
                    android:text="@string/second_name_profile" />

                <TextView
                    android:id="@+id/profileRole"
                    style="@style/style_text_view_default"
                    android:layout_gravity="start"
                    android:paddingStart="30dp"
                    android:text="@string/role_profile" />

                <TextView
                    android:id="@+id/profileNumPhone"
                    style="@style/style_text_view_default"
                    android:layout_gravity="start"
                    android:paddingStart="30dp"
                    android:text="@string/num_phone_profile" />

                <TextView
                    android:id="@+id/profileAge"
                    style="@style/style_text_view_default"
                    android:layout_gravity="start"
                    android:paddingStart="30dp"
                    android:text="@string/age_profile" />

                <TextView
                    android:id="@+id/profileAddress"
                    style="@style/style_text_view_default"
                    android:layout_gravity="start"
                    android:paddingStart="30dp"
                    android:text="@string/adress_profile" />

                <TextView
                    android:id="@+id/input"
                    style="@style/style_text_view_default"
                    android:layout_gravity="start"
                    android:paddingStart="30dp"
                    android:text="@string/method_entry_profile" />
            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/callBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/white_phone_24"
                android:text="@string/call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/smsBTN"
                app:layout_constraintStart_toEndOf="@id/callBTN"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/smsBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/white_message_24"
                android:text="@string/send_sms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/space"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>