<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PasswordRecFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/remove_password"/>
    <TextView
        style="@style/style_text_view_title"
        android:text="@string/lost_password"/>
    <TextView
        style="@style/style_text_view_default"
        android:text="@string/text_lost_password"/>

    <LinearLayout style="@style/style_linear_layout_for_ET">

        <EditText
            android:id="@+id/emailLogInET"
            style="@style/style_edit_text_logIn"
            android:drawableLeft="@drawable/gray_mail_24"
            android:hint="@string/profile_mail"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <Button
        android:id="@+id/sendBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/white_send_24"
        android:text="@string/send"/>
</LinearLayout>
</FrameLayout>