<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:scaleType="fitStart"
        android:src="@drawable/background_messenger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/person_50" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_edit_24"
        android:background="@color/none"
        app:layout_constraintBottom_toBottomOf="@+id/cardImage"
        app:layout_constraintEnd_toEndOf="@+id/cardImage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <TextView
            style="@style/style_text_view_title"
            android:text="@string/profile_login" />

        <TextView
            style="@style/style_text_view_default"
            android:text="@string/profile_mail" />

        <TextView
            style="@style/style_text_view_default"
            android:text="@string/method_entry_profile" />

        <LinearLayout style="@style/style_linear_layout_for_ET">

            <EditText
                style="@style/style_edit_text"
                android:hint="@string/profile_name" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_layout_for_ET">

            <EditText
                style="@style/style_edit_text"
                android:hint="@string/second_name_profile" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_layout_for_ET">

            <EditText
                style="@style/style_edit_text"
                android:hint="@string/role_profile" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_layout_for_ET">

            <EditText
                style="@style/style_edit_text"
                android:hint="@string/adress_profile" />
        </LinearLayout>

        <LinearLayout style="@style/style_linear_layout_for_ET">

            <EditText
                style="@style/style_edit_text"
                android:hint="@string/age_profile" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/saveBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawableLeft="@drawable/white_save_24"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cartForBTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cartForBTN"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/saveBTN"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageButton
                android:id="@+id/editNumPhone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/violet"
                android:src="@drawable/white_phone_24"/>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>