<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="250dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/register" />

        </androidx.cardview.widget.CardView>

        <LinearLayout style="@style/style_linear_layout_for_ET">

            <EditText
                android:id="@+id/emailLogInET"
                style="@style/style_edit_text_logIn"
                android:drawableLeft="@drawable/gray_mail_24"
                android:hint="@string/profile_mail"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/style_linear_layout_for_ET">

            <EditText
                android:id="@+id/passwordLogInET"
                style="@style/style_edit_text_logIn"
                android:drawableLeft="@drawable/gray_lock_24"
                android:hint="@string/password_log"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/viewPasswordBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="12dp"
                android:src="@drawable/gray_eye_40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout style="@style/style_linear_layout_for_ET">

            <EditText
                android:id="@+id/passwordAcceptLogInET"
                style="@style/style_edit_text_logIn"
                android:drawableLeft="@drawable/gray_lock_24"
                android:hint="@string/password_accept_log"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/logInBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/white_login_24"
            android:padding="15dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/register"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/registerTV"
            style="@style/style_text_view_title"
            android:text="@string/input" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>